# idemptx

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
src/idemptx/: __init__.py  decorator.py  exceptions.py
src/idemptx/backend/: __init__.py  base.py  memory.py  redis.py
tests/: conftest.py  test_basic.py
